Migrate to Java 21, use virtual threads Remove dependencies on AbstractFrame Minor cleanup